testing add of makefile

--- a/project-data/makefile
+++ b/project-data/makefile
@@ -1,2 +1,5 @@
 graphics:
 	./graphics-scripts/graphics-LG.gpl
+	./graphics-scripts/graphics-catalogue-tests.gpl
+	./graphics-scripts/graphics-chi-squared-histogram.gpl
+	./graphics-scripts/graphics-catalogue-parameter-variation.gpl
